fix a weird layout bug
fuck you, CSS. fuck you.

--- a/styles/ink.less
+++ b/styles/ink.less
@@ -103,7 +103,7 @@ atom-text-editor::shadow {
 }
 
 .ink.stepper {
-  position: absolute;
+  position: relative;
   left: 20px;
   border-left: 2px solid @text-color-info;
   border-radius: 3px;
